--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
+    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.6.2",
     "raven-js": "^3.27.2",
     "react": "^16.13.1",
